<resources>

    <string name="app_name">简单五十音</string>

    <string name="setting">设置</string>

    <string name="fifty_tone_map">五十音图</string>

    <string name="listening_test">听音测试</string>

    <string name="question_description">请点击播放按钮并根据听到的读音选择对应的假名</string>

    <string name="answer_a">选项A</string>

    <string name="answer_b">选项B</string>

    <string name="answer_c">选项C</string>

    <string name="answer_d">选项D</string>

    <string name="confirm">确定</string>

    <string name="next_question">下一题</string>

    <string name="answer_check">答案</string>

    <string name="finish">结束测试</string>

    <string name="error_statistics">错误统计</string>

    <string name="back">返回</string>

    <string name="title">标题</string>

    <string name="name">名称</string>

    <string name="percent">百分比</string>

    <string name="grid_view_item_image">九宫格图片</string>

    <string name="grid_view_item_name">九宫格名称</string>

    <string name="music_start">播放音乐按钮</string>

    <string name="start_logo">start_logo</string>

    <string name="sort_by_id">按五十音排序</string>

    <string name="sort_by_ratio">按错误率排序</string>

    <string name="hiragana_test">平假名测试</string>

    <string name="katakana_test">片假名测试</string>

    <string name="hybrid_test">混合测试</string>

    <string name="time_slow">答题时间20s</string>

    <string name="time_mid">答题时间10s</string>

    <string name="time_fast">答题时间5s</string>

    <string name="clear_statistics">清空数据</string>

    <string name="simple_mode">简单模式</string>

    <string name="explicit_mode">详细模式</string>

    <string name="night_theme">夜间模式</string>
    
    <string name="day_theme">日间模式</string>
    
    <string name="test_result">测试结果</string>
    
    <string name="character">character</string>
    
    <string name="pronounce">发音</string>
    
    <string name="order_of_strokes">笔顺</string>
    
    <string name="write_practice">书写练习</string>
    
    <string name="up">上</string>
    
    <string name="down">下</string>
    
    <string name="left">左</string>
    
    <string name="right">右</string>
    
    <string name="record_compare">发音对比</string>
    
    <string name="record_dialog_img">record_dialog_img</string>
    
    <string name="eraser">擦除痕迹</string>
    
    <string name="hiragana">平假名</string>
    
    <string name="katakana">片假名</string>
    
    <string name="simple_fifty_tone">简单五十音</string>
    
    <string name="your_score_is">您的得分是</string>
    
    <string name="score_display_error">Score display error!</string>
    
    <string name="plz_record_first">请先录音</string>
    
    <string name="answer_time_left">剩余答题时间：</string>
    
</resources>
