<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background_color"
    android:orientation="vertical" >

	<ScrollView 
	    android:layout_weight="1"
	    android:layout_width="match_parent"
	    android:layout_height="0dp">
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:orientation="vertical">
 
	        <TextView
	        	android:layout_width="match_parent"
	        	android:layout_height="wrap_content"
	        	android:textSize="20sp"
	        	android:textColor="?attr/text_color"
	        	android:text="@string/question_description"/>
	   		<ImageButton 
	   		    android:id="@+id/play_meterial"
	   		    android:layout_width="30dp"
	   		    android:layout_height="30dp"
	   		    android:background="@drawable/music_start"
	   		    android:layout_gravity="left"
	   		    android:contentDescription="@string/music_start"/>
	   		
	   		<ProgressBar 
	   		    android:id="@+id/time_left_progress"
	   		    android:layout_width="match_parent"
	   		    android:layout_height="wrap_content"
	   		    style="?android:attr/progressBarStyleHorizontal"
	   		    android:progressDrawable="@drawable/progressbar_color"
	   		    android:max="200"/>
	   		
	   		<LinearLayout
	   		    android:layout_width="match_parent"
	   		    android:layout_height="wrap_content"
	   		    android:orientation="horizontal">
   				<TextView 
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:text="@string/answer_time_left"
				    android:textColor="@color/blue"/>
		    	<TextView 
				    android:id="@+id/time_left"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:text="@string/app_name"
				    android:textColor="@color/blue"/>
   		    </LinearLayout>
	        
		    <RadioGroup 
		        android:id="@+id/options"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content">
		        <RadioButton 
		            android:id="@+id/answer_a"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:text="@string/answer_a"
		            android:textSize="20sp"
		            android:textColor="?attr/text_color"/>
		        <RadioButton 
		            android:id="@+id/answer_b"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:text="@string/answer_b"
		            android:textSize="20sp"
		            android:textColor="?attr/text_color"/>
		        <RadioButton 
		            android:id="@+id/answer_c"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:text="@string/answer_c"
		            android:textSize="20sp"
		            android:textColor="?attr/text_color"/>
		        <RadioButton 
		            android:id="@+id/answer_d"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:text="@string/answer_d"
		            android:textSize="20sp"
		            android:textColor="?attr/text_color"/>
		    </RadioGroup>
		    
		    <TextView 
		        android:id="@+id/answer_check"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:textSize="20sp"
		        android:text="@string/answer_check"
		        android:textColor="#FF0000"
		        android:visibility="visible"/>
   	    
   	    </LinearLayout>
	</ScrollView>
	

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom">
        <Button
            android:id="@+id/confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm">
        </Button>
       
        <Button
        	android:id="@+id/next_question"
            android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/next_question"
        	android:visibility="invisible">
    	</Button>
    	
        <Button 
	        android:id="@+id/finish"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/finish"/>
    </LinearLayout>

</LinearLayout>
